# annie-polars

./: .gitignore  README.md  pyproject.toml
annie_polars/: __init__.py  polars.py  utility.py
examples/: get_polars.py  test.py
