[tool.poetry]
name = "annie-polars"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
scipy = "^1.11.3"
matplotlib = "^3.8.0"
annie-gravity-model={git="https://github.com/willdickson/annie-gravity-model"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
